--- a/hyperapp/command_line/construct_resources.resources.yaml
+++ b/hyperapp/command_line/construct_resources.resources.yaml
@@ -1,24 +1,24 @@
 import:
-- legacy_service.hyperapp_dir
-- legacy_service.resource_module_registry
-- legacy_service.register_associations
-- legacy_type.attribute.attribute
-- legacy_type.python_module.python_module
-- guesser.construct_resources.construct_resources
+- legacy_service:hyperapp_dir
+- legacy_service:resource_module_registry
+- legacy_service:register_associations
+- legacy_type.attribute:attribute
+- legacy_type.python_module:python_module
+- guesser.construct_resources:construct_resources
 
 definitions:
 
   construct_resources_module:
-    _type: legacy_type.python_module.python_module
+    _type: legacy_type.python_module:python_module
     module_name: construct_resources
     file_name: construct_resources.dyn.py
     import_list:
-      services.construct_resources: guesser.construct_resources.construct_resources
-      services.hyperapp_dir: legacy_service.hyperapp_dir
-      services.resource_module_registry: legacy_service.resource_module_registry
-      services.register_associations: legacy_service.register_associations
+      services.construct_resources: guesser.construct_resources:construct_resources
+      services.hyperapp_dir: legacy_service:hyperapp_dir
+      services.resource_module_registry: legacy_service:resource_module_registry
+      services.register_associations: legacy_service:register_associations
 
   construct_resources:
-    _type: legacy_type.attribute.attribute
+    _type: legacy_type.attribute:attribute
     object: construct_resources_module
     attr_name: construct_resources
