--- a/hyperapp/guesser/attr_visitor.resources.yaml
+++ b/hyperapp/guesser/attr_visitor.resources.yaml
@@ -1,40 +1,40 @@
 import:
-  - legacy_service.mosaic
-  - legacy_service.python_object_creg
-  - legacy_type.attribute.attribute
-  - legacy_type.call.call
-  - legacy_type.inspect.fn_attr
-  - legacy_type.inspect.object_t
-  - legacy_type.partial.param
-  - legacy_type.partial.partial
-  - legacy_type.piece_ref.piece_ref
-  - legacy_type.python_module.python_module
-  - legacy_type.raw.raw
-  - guesser.runner.get_resource_type
+  - legacy_service:mosaic
+  - legacy_service:python_object_creg
+  - legacy_type.attribute:attribute
+  - legacy_type.call:call
+  - legacy_type.inspect:fn_attr
+  - legacy_type.inspect:object_t
+  - legacy_type.partial:param
+  - legacy_type.partial:partial
+  - legacy_type.piece_ref:piece_ref
+  - legacy_type.python_module:python_module
+  - legacy_type.raw:raw
+  - guesser.runner:get_resource_type
 
 definitions:
 
   runner_method_get_resource_type_ref:
-    _type: legacy_type.piece_ref.piece_ref
-    value: guesser.runner.get_resource_type
+    _type: legacy_type.piece_ref:piece_ref
+    value: guesser.runner:get_resource_type
 
   attr_visitor_module:
-    _type: legacy_type.python_module.python_module
+    _type: legacy_type.python_module:python_module
     module_name: attr_visitor
     file_name: attr_visitor.dyn.py
     import_list:
-      htypes.attribute.attribute: legacy_type.attribute.attribute
-      htypes.call.call: legacy_type.call.call
-      htypes.inspect.fn_attr: legacy_type.inspect.fn_attr
-      htypes.inspect.object_t: legacy_type.inspect.object_t
-      htypes.partial.param: legacy_type.partial.param
-      htypes.partial.partial: legacy_type.partial.partial
-      htypes.raw.raw: legacy_type.raw.raw
-      services.mosaic: legacy_service.mosaic
-      services.python_object_creg: legacy_service.python_object_creg
+      htypes.attribute.attribute: legacy_type.attribute:attribute
+      htypes.call.call: legacy_type.call:call
+      htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
+      htypes.inspect.object_t: legacy_type.inspect:object_t
+      htypes.partial.param: legacy_type.partial:param
+      htypes.partial.partial: legacy_type.partial:partial
+      htypes.raw.raw: legacy_type.raw:raw
+      services.mosaic: legacy_service:mosaic
+      services.python_object_creg: legacy_service:python_object_creg
       services.runner_method_get_resource_type_ref: runner_method_get_resource_type_ref
 
   AttrVisitor:
-    _type: legacy_type.attribute.attribute
+    _type: legacy_type.attribute:attribute
     object: attr_visitor_module
     attr_name: AttrVisitor
