--- a/hyperapp/guesser/import_resources.resources.yaml
+++ b/hyperapp/guesser/import_resources.resources.yaml
@@ -1,26 +1,26 @@
 import:
-  - legacy_service.builtin_services
-  - legacy_service.mosaic
-  - legacy_type.attribute.attribute
-  - legacy_type.python_module.python_module
-  - legacy_type.legacy_service.builtin_service
-  - legacy_type.legacy_service.module_service
-  - legacy_type.legacy_type.type
+  - legacy_service:builtin_services
+  - legacy_service:mosaic
+  - legacy_type.attribute:attribute
+  - legacy_type.python_module:python_module
+  - legacy_type.legacy_service:builtin_service
+  - legacy_type.legacy_service:module_service
+  - legacy_type.legacy_type:type
 
 definitions:
 
   import_resources_module:
-    _type: legacy_type.python_module.python_module
+    _type: legacy_type.python_module:python_module
     module_name: import_resources
     file_name: import_resources.dyn.py
     import_list:
-      htypes.legacy_type.type: legacy_type.legacy_type.type
-      htypes.legacy_service.builtin_service: legacy_type.legacy_service.builtin_service
-      htypes.legacy_service.module_service: legacy_type.legacy_service.module_service
-      services.builtin_services: legacy_service.builtin_services
-      services.mosaic: legacy_service.mosaic
+      htypes.legacy_type.type: legacy_type.legacy_type:type
+      htypes.legacy_service.builtin_service: legacy_type.legacy_service:builtin_service
+      htypes.legacy_service.module_service: legacy_type.legacy_service:module_service
+      services.builtin_services: legacy_service:builtin_services
+      services.mosaic: legacy_service:mosaic
 
   available_import_resources:
-    _type: legacy_type.attribute.attribute
+    _type: legacy_type.attribute:attribute
     object: import_resources_module
     attr_name: available_import_resources
