--- a/hyperapp/guesser/runner.resources.yaml
+++ b/hyperapp/guesser/runner.resources.yaml
@@ -1,37 +1,37 @@
 import:
-  - legacy_module.guesser.runner
-  - legacy_service.mosaic
-  - legacy_service.types
-  - legacy_service.python_object_creg
-  - legacy_type.attribute.attribute
-  - legacy_type.partial.partial
-  - legacy_type.call.call
+  - legacy_module.guesser:runner
+  - legacy_service:mosaic
+  - legacy_service:types
+  - legacy_service:python_object_creg
+  - legacy_type.attribute:attribute
+  - legacy_type.partial:partial
+  - legacy_type.call:call
 
 definitions:
 
   runner_attribute:
-    _type: legacy_type.attribute.attribute
-    object: legacy_module.guesser.runner
+    _type: legacy_type.attribute:attribute
+    object: legacy_module.guesser:runner
     attr_name: Runner
 
   runner_factory:
-    _type: legacy_type.partial.partial
+    _type: legacy_type.partial:partial
     function: runner_attribute
     params:
-      mosaic: legacy_service.mosaic
-      types: legacy_service.types
-      python_object_creg: legacy_service.python_object_creg
+      mosaic: legacy_service:mosaic
+      types: legacy_service:types
+      python_object_creg: legacy_service:python_object_creg
 
   runner:
-    _type: legacy_type.call.call
+    _type: legacy_type.call:call
     function: runner_factory
 
   runner_method_collect_attributes:
-    _type: legacy_type.attribute.attribute
+    _type: legacy_type.attribute:attribute
     object: runner
     attr_name: collect_attributes
 
   get_resource_type:
-    _type: legacy_type.attribute.attribute
+    _type: legacy_type.attribute:attribute
     object: runner
     attr_name: get_resource_type
