--- a/hyperapp/client/command_list.fixtures.resources.yaml
+++ b/hyperapp/client/command_list.fixtures.resources.yaml
@@ -38,10 +38,6 @@ definitions:
       services.mosaic: legacy_service:mosaic
       services.types: legacy_service:types
       view_command: legacy_module.async.ui:view_command
-  global_command_list:
-    _type: legacy_type.attribute:attribute
-    object: command_list_fixtures.module
-    attr_name: global_command_list
   module.qt_keys.run_input_key_dialog:
     _type: legacy_type.attribute:attribute
     object: command_list_fixtures.module
@@ -90,6 +86,18 @@ definitions:
     _type: legacy_type.attribute:attribute
     object: command_list_fixtures.module
     attr_name: param_object_commands_view_state
+  service.adapter_factory:
+    _type: legacy_type.attribute:attribute
+    object: command_list_fixtures.module
+    attr_name: phony_adapter_factory
+  service.global_command_list:
+    _type: legacy_type.attribute:attribute
+    object: command_list_fixtures.module
+    attr_name: service_global_command_list
+  service.object_commands_factory:
+    _type: legacy_type.attribute:attribute
+    object: command_list_fixtures.module
+    attr_name: service_object_commands_factory
   service.root_view:
     _type: legacy_type.attribute:attribute
     object: command_list_fixtures.module
