--- a/hyperapp/guesser/constructor.resources.yaml
+++ b/hyperapp/guesser/constructor.resources.yaml
@@ -5,6 +5,7 @@ import:
   - legacy_type.call:call
   - legacy_type.inspect:fn_attr
   - legacy_type.inspect:list_t
+  - legacy_type.impl:list_spec
   - legacy_type.python_module:python_module
 
 definitions:
@@ -18,6 +19,7 @@ definitions:
       htypes.call.call: legacy_type.call:call
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.list_t: legacy_type.inspect:list_t
+      htypes.impl.list_spec: legacy_type.impl:list_spec
       htypes.python_module.python_module: legacy_type.python_module:python_module
       services.resource_module_factory: legacy_service:resource_module_factory
       services.resource_type_producer: legacy_service:resource_type_producer
