--- a/hyperapp/guesser/constructor.resources.yaml
+++ b/hyperapp/guesser/constructor.resources.yaml
@@ -1,14 +1,23 @@
 import:
+  - legacy_service:mosaic
   - legacy_service:resource_module_factory
   - legacy_service:resource_type_producer
   - legacy_type.attribute:attribute
   - legacy_type.call:call
   - legacy_type.inspect:fn_attr
   - legacy_type.inspect:list_t
+  - legacy_type.inspect:record_t
+  - legacy_type.impl:impl_association
   - legacy_type.impl:list_spec
+  - legacy_type.piece_ref:piece_ref
   - legacy_type.python_module:python_module
+  - guesser.runner:get_resource_type
 
 definitions:
+
+  runner_method_get_resource_type_ref:
+    _type: legacy_type.piece_ref:piece_ref
+    value: guesser.runner:get_resource_type
 
   constructor_module:
     _type: legacy_type.python_module:python_module
@@ -19,10 +28,14 @@ definitions:
       htypes.call.call: legacy_type.call:call
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.list_t: legacy_type.inspect:list_t
+      htypes.inspect.record_t: legacy_type.inspect:record_t
+      htypes.impl.impl_association: legacy_type.impl:impl_association
       htypes.impl.list_spec: legacy_type.impl:list_spec
       htypes.python_module.python_module: legacy_type.python_module:python_module
+      services.mosaic: legacy_service:mosaic
       services.resource_module_factory: legacy_service:resource_module_factory
       services.resource_type_producer: legacy_service:resource_type_producer
+      services.runner_method_get_resource_type_ref: runner_method_get_resource_type_ref
 
   Constructor:
     _type: legacy_type.attribute:attribute
