--- a/hyperapp/guesser/constructor.resources.yaml
+++ b/hyperapp/guesser/constructor.resources.yaml
@@ -9,6 +9,7 @@ import:
   - legacy_type.inspect:record_t
   - legacy_type.impl:impl_association
   - legacy_type.impl:list_spec
+  - legacy_type.impl:python_object_association
   - legacy_type.piece_ref:piece_ref
   - legacy_type.python_module:python_module
   - guesser.runner:get_resource_type
@@ -31,6 +32,7 @@ definitions:
       htypes.inspect.record_t: legacy_type.inspect:record_t
       htypes.impl.impl_association: legacy_type.impl:impl_association
       htypes.impl.list_spec: legacy_type.impl:list_spec
+      htypes.impl.python_object_association: legacy_type.impl:python_object_association
       htypes.python_module.python_module: legacy_type.python_module:python_module
       services.mosaic: legacy_service:mosaic
       services.resource_module_factory: legacy_service:resource_module_factory
