Constructor: add global commands

--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -19,14 +19,22 @@ import:
 - legacy_type.command_list:item
 - legacy_type.command_list:object_command_list
 - legacy_type.command_list:object_command_list_d
+- legacy_type.command_list:open_global_command_list_d
+- legacy_type.command_list:open_view_command_list_d
 - legacy_type.command_list:view_command_list
 - legacy_type.command_list:view_command_list_d
 - legacy_type.command_list:view_item
+- legacy_type.global_command:global_command_association
+- legacy_type.impl:global_command_impl
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
 - legacy_type.impl:python_object_association
 - legacy_type.python_module:python_module
 associations:
+- _type: legacy_type.global_command:global_command_association
+  command: open_global_command_list.command
+- _type: legacy_type.global_command:global_command_association
+  command: open_view_command_list.command
 - _type: legacy_type.impl:impl_association
   piece_t: legacy_type.command_list:global_command_list
   ctr_fn: GlobalCommandList
@@ -105,10 +113,24 @@ definitions:
     _type: legacy_type.attribute:attribute
     object: command_list.module
     attr_name: open_global_command_list
+  open_global_command_list.command:
+    _type: legacy_type.impl:global_command_impl
+    function: open_global_command_list
+    dir: open_global_command_list_d
+  open_global_command_list_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:open_global_command_list_d
   open_view_command_list:
     _type: legacy_type.attribute:attribute
     object: command_list.module
     attr_name: open_view_command_list
+  open_view_command_list.command:
+    _type: legacy_type.impl:global_command_impl
+    function: open_view_command_list
+    dir: open_view_command_list_d
+  open_view_command_list_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:open_view_command_list_d
   view_command_list_d:
     _type: legacy_type.call:call
     function: legacy_type.command_list:view_command_list_d
