--- a/hyperapp/async/ui/qt/window.yaml
+++ b/hyperapp/async/ui/qt/window.yaml
@@ -8,9 +8,9 @@ import:
   code:
     - async.ui.qt.view
     - async.ui.command
-    - async.ui.command_hub
 require:
   - async_stop_event
   - view_registry
+  - command_hub_factory
 provide:
   - root_view
