--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -14,21 +14,30 @@ import:
 - legacy_type.builtin:string
 - legacy_type.call:call
 - legacy_type.command:command_shortcut_d
+- legacy_type.command:object_commands_d
 - legacy_type.command_list:global_command_list
 - legacy_type.command_list:global_command_list_d
+- legacy_type.command_list:global_command_list_set_key_d
+- legacy_type.command_list:global_command_list_set_key_escape_d
 - legacy_type.command_list:item
 - legacy_type.command_list:object_command_list
 - legacy_type.command_list:object_command_list_d
+- legacy_type.command_list:object_command_list_set_key_d
+- legacy_type.command_list:object_command_list_set_key_escape_d
 - legacy_type.command_list:open_global_command_list_d
 - legacy_type.command_list:open_view_command_list_d
 - legacy_type.command_list:view_command_list
 - legacy_type.command_list:view_command_list_d
+- legacy_type.command_list:view_command_list_set_key_d
+- legacy_type.command_list:view_command_list_set_key_escape_d
 - legacy_type.command_list:view_item
 - legacy_type.global_command:global_command_association
 - legacy_type.impl:global_command_impl
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
+- legacy_type.impl:method_command_impl
 - legacy_type.impl:python_object_association
+- legacy_type.lcs:lcs_set_resource_association
 - legacy_type.python_module:python_module
 associations:
 - _type: legacy_type.global_command:global_command_association
@@ -56,6 +65,36 @@ associations:
 - _type: legacy_type.impl:python_object_association
   t: legacy_type.command_list:view_command_list
   function: ViewCommandList
+- _type: legacy_type.lcs:lcs_set_resource_association
+  dir:
+  - global_command_list_d
+  - object_commands_d
+  value: global_command_list.set_key.command
+- _type: legacy_type.lcs:lcs_set_resource_association
+  dir:
+  - global_command_list_d
+  - object_commands_d
+  value: global_command_list.set_key_escape.command
+- _type: legacy_type.lcs:lcs_set_resource_association
+  dir:
+  - object_command_list_d
+  - object_commands_d
+  value: object_command_list.set_key.command
+- _type: legacy_type.lcs:lcs_set_resource_association
+  dir:
+  - object_command_list_d
+  - object_commands_d
+  value: object_command_list.set_key_escape.command
+- _type: legacy_type.lcs:lcs_set_resource_association
+  dir:
+  - view_command_list_d
+  - object_commands_d
+  value: view_command_list.set_key.command
+- _type: legacy_type.lcs:lcs_set_resource_association
+  dir:
+  - view_command_list_d
+  - object_commands_d
+  value: view_command_list.set_key_escape.command
 definitions:
   GlobalCommandList:
     _type: legacy_type.attribute:attribute
@@ -89,17 +128,53 @@ definitions:
       services.python_object_creg: legacy_service:python_object_creg
       services.root_view: legacy_service:root_view
       services.web: legacy_service:web
+  global_command_list.set_key.command:
+    _type: legacy_type.impl:method_command_impl
+    method: set_key
+    params:
+    - current_item
+    dir: global_command_list_set_key_d
+  global_command_list.set_key_escape.command:
+    _type: legacy_type.impl:method_command_impl
+    method: set_key_escape
+    params:
+    - current_item
+    dir: global_command_list_set_key_escape_d
   global_command_list_d:
     _type: legacy_type.call:call
     function: legacy_type.command_list:global_command_list_d
+  global_command_list_set_key_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:global_command_list_set_key_d
+  global_command_list_set_key_escape_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:global_command_list_set_key_escape_d
   global_command_list_spec:
     _type: legacy_type.impl:list_spec
     key_attribute: name
     key_t: legacy_type.builtin:string
     dir: global_command_list_d
+  object_command_list.set_key.command:
+    _type: legacy_type.impl:method_command_impl
+    method: set_key
+    params:
+    - current_item
+    dir: object_command_list_set_key_d
+  object_command_list.set_key_escape.command:
+    _type: legacy_type.impl:method_command_impl
+    method: set_key_escape
+    params:
+    - current_item
+    dir: object_command_list_set_key_escape_d
   object_command_list_d:
     _type: legacy_type.call:call
     function: legacy_type.command_list:object_command_list_d
+  object_command_list_set_key_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:object_command_list_set_key_d
+  object_command_list_set_key_escape_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:object_command_list_set_key_escape_d
   object_command_list_spec:
     _type: legacy_type.impl:list_spec
     key_attribute: name
@@ -109,6 +184,9 @@ definitions:
     _type: legacy_type.attribute:attribute
     object: command_list.module
     attr_name: object_commands
+  object_commands_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command:object_commands_d
   open_global_command_list:
     _type: legacy_type.attribute:attribute
     object: command_list.module
@@ -131,9 +209,27 @@ definitions:
   open_view_command_list_d:
     _type: legacy_type.call:call
     function: legacy_type.command_list:open_view_command_list_d
+  view_command_list.set_key.command:
+    _type: legacy_type.impl:method_command_impl
+    method: set_key
+    params:
+    - current_item
+    dir: view_command_list_set_key_d
+  view_command_list.set_key_escape.command:
+    _type: legacy_type.impl:method_command_impl
+    method: set_key_escape
+    params:
+    - current_item
+    dir: view_command_list_set_key_escape_d
   view_command_list_d:
     _type: legacy_type.call:call
     function: legacy_type.command_list:view_command_list_d
+  view_command_list_set_key_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:view_command_list_set_key_d
+  view_command_list_set_key_escape_d:
+    _type: legacy_type.call:call
+    function: legacy_type.command_list:view_command_list_set_key_escape_d
   view_command_list_spec:
     _type: legacy_type.impl:list_spec
     key_attribute: name
