--- a/hyperapp/guesser/constructor.resources.yaml
+++ b/hyperapp/guesser/constructor.resources.yaml
@@ -10,7 +10,9 @@ import:
   - legacy_type.impl:global_command_impl
   - legacy_type.impl:impl_association
   - legacy_type.impl:list_spec
+  - legacy_type.impl:method_command_impl
   - legacy_type.impl:python_object_association
+  - legacy_type.lcs:lcs_set_resource_association
   - legacy_type.global_command:global_command_association
   - legacy_type.piece_ref:piece_ref
   - legacy_type.python_module:python_module
@@ -36,6 +38,8 @@ definitions:
       htypes.impl.impl_association: legacy_type.impl:impl_association
       htypes.impl.list_spec: legacy_type.impl:list_spec
       htypes.impl.python_object_association: legacy_type.impl:python_object_association
+      htypes.impl.method_command_impl: legacy_type.impl:method_command_impl
+      htypes.lcs.lcs_set_resource_association: legacy_type.lcs:lcs_set_resource_association
       htypes.global_command.global_command_association: legacy_type.global_command:global_command_association
       htypes.python_module.python_module: legacy_type.python_module:python_module
       services.mosaic: legacy_service:mosaic
