--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -24,6 +24,7 @@ import:
 - legacy_type.command_list:object_command_list_d
 - legacy_type.command_list:object_command_list_set_key_d
 - legacy_type.command_list:object_command_list_set_key_escape_d
+- legacy_type.command_list:object_commands_d
 - legacy_type.command_list:open_global_command_list_d
 - legacy_type.command_list:open_view_command_list_d
 - legacy_type.command_list:view_command_list
@@ -36,6 +37,7 @@ import:
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
+- legacy_type.impl:object_command_impl
 - legacy_type.impl:python_object_association
 - legacy_type.lcs:lcs_set_resource_association
 - legacy_type.python_module:python_module
@@ -184,9 +186,16 @@ definitions:
     _type: legacy_type.attribute:attribute
     object: command_list.module
     attr_name: object_commands
+  object_commands.command:
+    _type: legacy_type.impl:object_command_impl
+    function: object_commands
+    params:
+    - piece
+    - view_state
+    dir: object_commands_d
   object_commands_d:
     _type: legacy_type.call:call
-    function: legacy_type.command:object_commands_d
+    function: legacy_type.command_list:object_commands_d
   open_global_command_list:
     _type: legacy_type.attribute:attribute
     object: command_list.module
