--- a/hyperapp/guesser/constructor.resources.yaml
+++ b/hyperapp/guesser/constructor.resources.yaml
@@ -11,6 +11,7 @@ import:
   - legacy_type.impl:impl_association
   - legacy_type.impl:list_spec
   - legacy_type.impl:method_command_impl
+  - legacy_type.impl:object_command_impl
   - legacy_type.impl:python_object_association
   - legacy_type.lcs:lcs_set_resource_association
   - legacy_type.global_command:global_command_association
@@ -37,8 +38,9 @@ definitions:
       htypes.impl.global_command_impl: legacy_type.impl:global_command_impl
       htypes.impl.impl_association: legacy_type.impl:impl_association
       htypes.impl.list_spec: legacy_type.impl:list_spec
-      htypes.impl.python_object_association: legacy_type.impl:python_object_association
       htypes.impl.method_command_impl: legacy_type.impl:method_command_impl
+      htypes.impl.object_command_impl: legacy_type.impl:object_command_impl
+      htypes.impl.python_object_association: legacy_type.impl:python_object_association
       htypes.lcs.lcs_set_resource_association: legacy_type.lcs:lcs_set_resource_association
       htypes.global_command.global_command_association: legacy_type.global_command:global_command_association
       htypes.python_module.python_module: legacy_type.python_module:python_module
